Complete UI rebrand: Update all user-facing BlockTube references
- Update options page title and logo to TunTun Extension
- Update options page header links to TunTun repo
- Update import error message to TunTun Extension
- Update toast notifications to TunTun Extension (4 instances)
- Update console.info initialization message
- Update extension icon tooltip to TunTun Extension Options
- Update Firefox manifests: name, description, and tooltip

All user-visible text now shows TunTun Extension branding.
Completes Phase 2 of rebrand following v1.0.0 release (4d9f187)

--- a/src/ui/options.html
+++ b/src/ui/options.html
@@ -7,15 +7,15 @@
     <link href="cm/dialog.css" rel="stylesheet" type="text/css">
     <link href="cm/fullscreen.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <title>BlockTube - Options</title>
+    <title>TunTun Extension - Options</title>
     <link rel="shortcut icon" type="image/png" href="../../assets/icons/16.png"/>
   </head>
   <body>
     <div id="header">
-      <h1 id="header-text"><img id="logo-img" src="../../assets/icons/128.png" /><span id="logo-text">BlockTube</span></h1>
+      <h1 id="header-text"><img id="logo-img" src="../../assets/icons/128.png" /><span id="logo-text">TunTun Extension</span></h1>
       <div id="header-menu">
-        <a class="nav-item" target="_blank" href="https://github.com/amitbl/blocktube/wiki">How to use</a>
-        <a class="nav-item" target="_blank" href="https://github.com/amitbl/blocktube/releases">Changelog (v{EXT_VERSION})</a>
+        <a class="nav-item" target="_blank" href="https://github.com/boxobi-tech/tuntun-extension/wiki">How to use</a>
+        <a class="nav-item" target="_blank" href="https://github.com/boxobi-tech/tuntun-extension/releases">Changelog (v{EXT_VERSION})</a>
       </div>
     </div>
     <div id="main">
